--- a/tutorials/05-css-animations/css/style.css
+++ b/tutorials/05-css-animations/css/style.css
@@ -24,16 +24,20 @@ body {
     font-family: 'Trebuchet MS';
     text-align: center;
     margin: 80px auto;
-    animation: skew 1s infinite alternate;
+    animation: skew 3s infinite normal;
 }
 
 @keyframes skew {
     0% {
-        transform: skew(0deg, 0deg);
+        transform: skew(-30deg,-20deg);
+    }
+
+    50% {
+        transform: skew(30deg, 20deg);
     }
 
     100% {
-        transform: skew(30deg, 20deg);
+        transform: skew(-30deg,-20deg);
     }
 }
 
@@ -48,7 +52,7 @@ body {
 
 .square:hover {
     background-color: salmon;
-    transform: rotate(30deg);
+    transform: rotate(180deg);
 }
 
 .button-div {
@@ -101,4 +105,14 @@ body {
     100% {
         width: 0vw;
     }
+}
+
+.jumpscare {
+    font-size: 32px;
+    text-align: center;
+    transition: all .2s;
+}
+
+.jumpscare:hover {
+    transform: scale(500);
 }
